feat(web): WIP WIP

--- a/web/src/test/manual/web/index.html
+++ b/web/src/test/manual/web/index.html
@@ -20,6 +20,9 @@
   </head>
   <body>
 
+  <h1>KeymanWeb 19 Testing</h1>
+  <h2><a href="./kmxkeyboard.html">Test KMX keyboard loaded in Keymanweb</a></h2>
+
   <h1>KeymanWeb 17 Testing</h1>
   <h2><a href="./unminified.html">Test unminified Keymanweb</a></h2>
   <h2><a href="./unminified - manual.html">Test unminified Keymanweb in manual-attachment mode.</a></h2>
